...
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/purple_700"
    tools:context=".activities.UsersActivity">

    <TextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="Select Contact"
        android:textColor="@color/white"
...
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@drawable/content_bottom_icon"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/users_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="20dp"
...
