...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textExpirationDate_ResidencePermit"
        android:layout_width="88dp"
        android:layout_height="21dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="120dp"
        android:text="None"
        android:visibility="invisible"
...
