...
                android:text="@string/download"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rp_title" />

            <ImageButton
                android:id="@+id/rp_download_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="33dp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/rp_download_text"
...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sp_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sp_pick_date_button"
                android:layout_width="155dp"
                android:layout_height="62dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="96dp"
                android:text="@string/pick_date"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/sp_date_text"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/sp_import_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="33dp"
                app:layout_constraintStart_toEndOf="@+id/sp_import_text"
                app:layout_constraintTop_toTopOf="parent"
...
                android:text="@string/download"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sp_title" />

            <ImageButton
                android:id="@+id/sp_download_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="33dp"
                android:visibility="invisible"
                app:layout_constraintStart_toEndOf="@+id/sp_download_text"
...
